//
//  OnboardingView.swift
//  SomLauncher
//
//  Created by Magnus von Scheele on 2024-11-23.
//
import SwiftUI
import SymbolPicker
import Combine

struct OnboardingView: View {
    
    @State var isWelcomeVisible = false
    @State var isSettingsVisible = false
    @State var isInfoVisible = false
    
    var onOnboardingComplete: () -> Void
    
    var body: some View {
        VStack() {
            Spacer()
            if (isWelcomeVisible) {
                WelcomeView(onStart: {
                    withAnimation {
                        isSettingsVisible = true
                        isWelcomeVisible = false
                    }
                })
                .transition(.offset(x: 0, y: 48).combined(with: .opacity))
            }
            if (isSettingsVisible) {
                StartSettingsView(onContinue: {
                    withAnimation {
                        isInfoVisible = true
                        isSettingsVisible = false
                    }
                })
                .transition(.offset(x: 0, y: 48).combined(with: .opacity))
            }
            if (isInfoVisible) {
                InfoView(onContinue: onOnboardingComplete)
                .transition(.offset(x: 0, y: 48).combined(with: .opacity))
            }
            Spacer()
        }
        .frame(maxWidth: .infinity)
        .edgesIgnoringSafeArea(.top)
        // TODO add gradient and possibly animate a wave
//        .apply {
//        extension View {
//            func apply<V: View>(@ViewBuilder _ block: (Self) -> V) -> V { block(self) }
//        }
//            if #available(macOS 15.0, *) {
//                $0.background(
//                    MeshGradient(
//                        width: 3,
//                        height: 3,
//                        points: [
//                            [0.0, 0.0], [0.5, 0.0], [1.0, 0.0],
//                            [0.0, 0.5], [0.9, 0.8], [1.0, 0.5],
//                            [0.0, 1.0], [0.5, 1.0], [1.0, 1.0]
//                        ],
//                        colors: [
//                            .black, .black, .black,
//                            .blue, .blue, .blue,
//                            .gray.opacity(0.5), .gray.opacity(0.5), .blue.opacity(0.5)
//                        ]
//                    )
//                )
//            } else {
//                $0.background(Color.red)
//            }
//        }
        .onAppear {
            withAnimation(.default) {
                isWelcomeVisible = true
            }
        }
        .frame(minWidth: 500, minHeight: 400)
    }
}

struct StartSettingsView: View {
    @State private var iconPickerPresented = false
    @AppStorage("menu-bar-icon") var menuBarIcon: String = "RocketIcon"
    @AppStorage("menu-bar-icon-custom") var menuBarIconShowCustom: Bool = false
    
    var onContinue: () -> Void
    
    private var launchAtLoginToggle: some View {
        VStack(alignment: .leading) {
            Text("Start SomLauncher when macOS starts")
            LaunchAtLogin.Toggle() {
                HStack {
                    Text("Launch at login")
                        .font(.subheadline)
                        .padding(.horizontal, 16)
                    
                }
            }
            .toggleStyle(.checkbox)
        }.padding(.vertical, 8)
    }
    
    private var menuBarIconPicker: some View {
        VStack(alignment: .leading) {
            Text("Pick a menu bar icon")
            Button {
                iconPickerPresented = true
            } label: {
                if (menuBarIcon == "RocketIcon")  {
                    Image(menuBarIcon)
                        .renderingMode(.template)
                        .resizable()
                        .tint(.primary)
                        .frame(width: 16, height: 16)
                } else {
                    Image(systemName: menuBarIcon)
                }
                
                Text("Menu bar icon")
                    .font(.subheadline)
                    .padding(.horizontal, 8)
                    .padding(.vertical, 6)
            }
            .sheet(isPresented: $iconPickerPresented) {
                SymbolPicker(symbol: Binding<String>(
                    get: { menuBarIcon },
                    set: { newValue in
                        guard newValue != menuBarIcon else { return }
                        menuBarIcon = newValue
                        menuBarIconShowCustom = newValue != "RocketIcon"
                    }
                ))
            }
            .buttonStyle(.plain)
        }
    }
    
    var body: some View {
        VStack(alignment: .leading) {
            Text("SomLauncher options")
                .font(.title)
            
            launchAtLoginToggle
            
            menuBarIconPicker
                .padding(.top, 16)
            
            Button("Continue", action: onContinue)
                .buttonStyle(.borderedProminent)
                .controlSize(.large)
                .padding(.top, 32)
            Text("Options can be changed later in settings")
                .font(.caption)
                .padding(.top, 4)
        }
        .fixedSize(horizontal: true, vertical: false)
    }
}

struct InfoView: View {
    
    @AppStorage("menu-bar-icon") var menuBarIcon: String = "RocketIcon"
    
    private let selectedApp: InstalledApp? = FileManager.default.getAppByUrl(url: URL(fileURLWithPath: "/System/Applications/Mail.app"))!
    
    @State private var currentTime = Date()
    private let timer = Timer.publish(every: 60, on: .main, in: .common).autoconnect()
    
    var onContinue: () -> Void
    
    private var appsListView: some View {
        VStack(spacing: 0) {
            CreateLaunchItemView(
                launchURL: .constant(selectedApp?.url),
                onDelete: { })
                .disabled(true)
            Divider()
            Button(action: {}) {
                Image(systemName: "plus.circle")
                    .frame(width: 24, height: 24)
                Text("Add item")
                Spacer()
            }
            .buttonStyle(NavigationLinkButtonStyle())
            .cornerRadius(8)
            .disabled(true)
        }
    }
    
    var body: some View {
        VStack(alignment: .leading, spacing: 0) {
            
            Text("You're all set!")
                .font(.headline.italic())
            Text("Here's how you create your first launcher")
                .font(.caption)
                .padding(.bottom, 16)
            
            Text("1. Name your launcher")
            Text("For example _Work_")
                .font(.caption)
                .padding(.bottom, 16)
            
            Text("2. Add apps to your first launcher")
            appsListView
            
            VStack {
                Text("3. Run your launcher any time from the menu bar icon")
                HStack(alignment: .center) {
                    Spacer()
                    if (menuBarIcon == "RocketIcon")  {
                        Image(menuBarIcon)
                            .resizable()
                            .frame(width: 16, height: 16)
                            .padding(.horizontal)
                    } else {
                        Image(systemName: menuBarIcon)
                            .padding(.horizontal)
                    }
                    Text(currentTime.formatted(.dateTime.hour().minute()))
                        .monospacedDigit()
                        .onReceive(timer) { _ in
                            currentTime = Date()
                        }
                }
                .padding(.horizontal)
                .frame(height: 22)
                .frame(maxWidth: .infinity)
                .foregroundStyle(.white)
                .background(.blue.opacity(0.8))
                .clipShape(RoundedRectangle(cornerRadius: 4))
                .padding(.top, 2)
            }
            .padding(.vertical, 16)
            
            Button("Create first launcher", action: onContinue)
                .buttonStyle(.borderedProminent)
                .controlSize(.large)
                .padding(.top, 8)
        }
        .fixedSize(horizontal: true, vertical: false)
    }
}

struct WelcomeView: View {
    
    var onStart: () -> Void
    
    var body: some View {
        VStack {
            Image("LauncherIcon")
                .resizable()
                .frame(width: 112, height: 112)
                .padding(.bottom)
            Text("Welcome")
                .font(.title)
            Text("Let's get you started")
                .font(.subheadline)
            
            Button("Continue", action: onStart)
                .buttonStyle(.borderedProminent)
                .controlSize(.large)
                .padding()
        }
        .fixedSize(horizontal: true, vertical: false)
    }
}

#Preview {
    InfoView(onContinue: {})
}

#Preview {
    OnboardingView(onOnboardingComplete: {})
}
